--- a/samples/DotNet.Push.Sample/DotNet.Push.Sample.csproj
+++ b/samples/DotNet.Push.Sample/DotNet.Push.Sample.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <AssemblyName>DotNet.Push.Sample</AssemblyName>
     <RootNamespace>DotNet.Push.Sample</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DotNet.Push\DotNet.Push.csproj" />
+    <ProjectReference Include="..\..\src\DotNet.Push\DotNet.Push.csproj" />
   </ItemGroup>
 </Project>
