--- a/samples/DotNet.Push.Sample/DotNet.Push.Sample.csproj
+++ b/samples/DotNet.Push.Sample/DotNet.Push.Sample.csproj
@@ -1,7 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+
     <TargetFramework>net9.0</TargetFramework>
+		<LangVersion>latest</LangVersion>
+
     <AssemblyName>DotNet.Push.Sample</AssemblyName>
     <RootNamespace>DotNet.Push.Sample</RootNamespace>
   </PropertyGroup>
