--- a/src/DotNet.Push/DotNet.Push.csproj
+++ b/src/DotNet.Push/DotNet.Push.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>net9.0;net8.0</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 
 		<Title>DotNet Push Notification</Title>
@@ -53,4 +53,8 @@
 		</None>
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="FirebaseAdmin" Version="3.0.0" />
+	</ItemGroup>
+	
 </Project>
